welcome.lessons.welcome.bat.bool1.LoneTeen.scala.error
loneTeen:2: error: value &! is not a member of Boolean
	((a<=20)&(a>=10))&!((b>=10)&(b<=20))||!((a<=20)&(a>=10))||((b>=10)&(b<=20))
                         ^