welcome.lessons.welcome.bat.bool1.LoneTeen.scala.code
def loneTeen(a:Int, b:Int):Boolean = {
	((a<=20)&(a>=10))&!((b>=10)&(b<=20))||!((a<=20)&(a>=10))||((b>=10)&(b<=20))
}
